artifacthub/library/general/requiredgputoleration/1.0.0/samples/gpu-toleration-key-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredGpuToleration
metadata:
  name: require-gpu-toleration
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    tolerationKey: "nvidia.com/gpu"
